2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, irq/irq.h, irq/no_pic.c: install
	and use new <irq/irq_supp.h> header.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>
	* irq/irq.h, irq/irq_init.c: Removed the definition
	of ASM_IRQ_VECTOR_BASE; this symbol was only use to
	initialize the irqBase member of the rtems_irq_global_settings
	struct. However, irqBase is an rtems_irq_symbolic_name,
	so using BSP_LOWEST_OFFSET is more appropriate.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>
	* irq/irq.h, irq/irq.c (removed), irq/no_pic.c (added),
	irq/irq_init.c, Makefile.am: The PSIM BSP (currently)
	has no support for an interrupt controller or interrupts
	other than the decrementer. Removed all definitions for PCI + ISA
	interrupts and all unnecessary code (leftovers from copying).
	Separated PIC-specific bits into 'no_pic.c' which allows us
	to use 'irq.c' (i.e., more code) from 'shared'.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* startup/linkcmds.c, start/start.S: call __eabi() from start.S
	and make sure linkcmds defines _SDA_BASE_ + _SDA2_BASE_ so that
	sysv + eabi are properly supported.

2007-11-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: BSP_DIRTY_MEMORY should be tested for zero not
	just defined.

2007-11-29	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c, Makefile.am: Initialize BATs and enable MMU
	to come closer to what other BSPs do. This allows us to use the
	shared irq_asm.S. No more individual assembly code :-)

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Eliminate PowerPC specific elements from the CPU
	Table. They have been replaced with variables named bsp_XXX as
	needed.

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac, startup/bspstart.c: Add BSP_DIRTY_MEMORY option.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps